<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_summaryDetail"
    android:tag="sumD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".summaryDetail"

    >

    <TextView
        android:id="@+id/tv_budgetUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/budgetUsed"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_budgetTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/totalBudget"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_budgetUsed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_budgetUsed" />

    <TextView
        android:id="@+id/tv_Sum_budgetLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="-24dp"
        android:text="@string/budgetLeft"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_Sum_budgetLeftAmt"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/tv_budgetUsed"
        app:layout_constraintTop_toTopOf="@+id/tv_budgetUsed" />

    <TextView
        android:id="@+id/tv_totalBudgetAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/intialNum"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_budgetUsedAmt"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_budgetUsed" />

    <TextView
        android:id="@+id/tv_budgetUsedAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intialNum"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_totalBudgetAmt" />

    <TextView
        android:id="@+id/tv_Sum_budgetLeftAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/intialNum"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_highestSpent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_budgetUsedAmt"
        app:layout_constraintTop_toTopOf="@+id/tv_totalBudgetAmt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/tv_totalBudgetAmt"
        app:layout_constraintTop_toBottomOf="@+id/tv_budgetTotal" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_Sum_budgetLeftAmt"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/tv_budgetUsedAmt"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/t_highestSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/highestSpent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/tv_amtOvershot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/amtOvershot"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_highestSpent" />

    <TextView
        android:id="@+id/tv_totalTransactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/totalTransactions"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amtOvershot" />

    <TextView
        android:id="@+id/tv_highestSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/intialNum"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/t_highestSpent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/t_highestSpent" />

    <TextView
        android:id="@+id/tv_overshotAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intialNum"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_amtOvershot"
        app:layout_constraintEnd_toEndOf="@+id/tv_highestSpent"
        app:layout_constraintTop_toTopOf="@+id/tv_amtOvershot"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_totalTransactionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intialNum"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_highestSpent"
        app:layout_constraintTop_toTopOf="@+id/tv_totalTransactions" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalBudgetAmt" />


</androidx.constraintlayout.widget.ConstraintLayout>

