<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenOtpHome">

    <EditText
        android:id="@+id/et_requestBudget"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_dollar_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_amountTxt"
        app:layout_constraintTop_toTopOf="@+id/tv_amountTxt" />

    <Button
        android:id="@+id/btn_genOtp"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:text="@string/genOtp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_requestBudget" />

    <TextView
        android:id="@+id/tv_amountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/amount"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_budgetLeft" />

    <TextView
        android:id="@+id/tv_budgetLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/budgetLeftWithSign"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_budgetLeftAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/intialNum"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/tv_budgetLeft"
        app:layout_constraintTop_toTopOf="@+id/tv_budgetLeft" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_genOtp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_genOtp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemHorizontalTranslationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        android:background="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>
