<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_oneLineAwareDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center">

    <ImageView
        android:id="@+id/iv_imageUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_awareTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_imageUrl"
        app:layout_constraintTop_toBottomOf="@+id/iv_imageUrl" />

    <TextView
        android:id="@+id/tv_awareDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="none|textMultiLine|text"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/tv_awareTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_awareTitle" />

    <TextView
        android:id="@+id/tv_awareTag"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tag"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_imageUrl"
        app:layout_constraintTop_toTopOf="@+id/iv_imageUrl" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_awareDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>